# gpu_statmech

./: .gitignore  README.md  experimental_log.md  ideas.md  pyproject.toml
archive/: README.md
archive/docs/: theory.md
archive/experiments/: README.md
archive/experiments/architecture_search/: 06_oracle_proposals.py  07_optimisation_loop.py  08_carnot_optimal_kernels.py  README.md
archive/experiments/simulator_validation/: 01_canonical_kernel_profiles.py  02_intervention_recommendation.py
archive/experiments/theoretical_calculations/: 01_carnot_curve.py  04_resonance.py  (+2 more)
archive/scripts/: run_gpusim_analysis.py
archive/tests/: test_carnot.py  test_loop.py  test_multi_gpu.py  test_observables.py  test_oracle.py  test_utils.py
docs/: gpusim_gaps.md  project_brief.md
experiments/: README.md
experiments/simulator_validation/: 01_canonical_kernel_profiles.py  02_intervention_recommendation.py  README.md
experiments/theoretical_calculations/: 01_carnot_curve.py  02_memory_hierarchy.py  03_scaling_efficiency.py  README.md
src/gpu_statmech/: __init__.py  carnot.py  compiler.py  energy.py  free_energy.py  gpusim_recommendation.py  loop.py  microstate.py  multi_gpu.py  observables.py  oracle.py  parallelism.py  pareto.py  partition_function.py  thermo.py  topology.py
tests/: test_carnot.py  test_compiler.py  test_energy.py  test_free_energy.py  test_gpusim_driver.py  test_gpusim_recommendation.py  test_microstate.py  test_multi_gpu.py  test_observables.py  test_parallelism.py  test_pareto.py  test_partition_function.py  test_thermo.py  test_topology.py
(+12 files in other folders)
